✋ Ignorados archivos de registros y pruebas

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 registro_conversacion_20250628_082253
 registro_conversacion_20250628_082253__
 renderer-para-mongodb(implementar)
-/node_modules
+/node_modulesregistro-conv/*.json
+registro-conv/*.txt
+renderer-para-mongodb(implementar).js
